@@ -1,0 +1,7 @@
+#pragma once
+
+namespace TEN::Entities::Creatures::TR3
+{
+    void InitialiseWaspMutant(short itemNumber);
+    void WaspMutantControl(short itemNumber);
+}
