@@ -229,6 +229,8 @@ enum GAME_OBJECT_ID : short
 	ID_BOSS_EXPLOSION_SHOCKWAVE,
 	ID_BOSS_EXPLOSION_RING,
 
+	ID_WASP_MUTANT = 294,
+
 	ID_SPRINGBOARD = 320,
 	ID_ROLLING_SPINDLE,
 	ID_DISK_SHOOTER,
