@@ -235,6 +235,7 @@ The following constants are inside ObjID.
 	BOSS_SHIELD
 	BOSS_EXPLOSION_SHOCKWAVE
 	BOSS_EXPLOSION_RING
+	WASP_MUTANT
 	SPRINGBOARD
 	ROLLING_SPINDLE
 	DISK_SHOOTER
@@ -1403,6 +1404,7 @@ static const std::unordered_map<std::string, GAME_OBJECT_ID> kObjIDs {
 	{ "BOSS_SHIELD", ID_BOSS_SHIELD },
 	{ "BOSS_EXPLOSION_SHOCKWAVE", ID_BOSS_EXPLOSION_SHOCKWAVE },
 	{ "BOSS_EXPLOSION_RING", ID_BOSS_EXPLOSION_RING },
+	{ "WASP_MUTANT", ID_WASP_MUTANT },
 	{ "SPRINGBOARD", ID_SPRINGBOARD },
 	{ "ROLLING_SPINDLE", ID_ROLLING_SPINDLE },
 	{ "DISK_SHOOTER", ID_DISK_SHOOTER },
