@@ -39,6 +39,8 @@ Version 1.0.7
 	- 0 – Normal mode. Sophia behaves like a regular enemy.
 	- 1 – Tower mode. Behaviour matched from Tomb Raider III.
 	- 2 – Tower mode with volumes. Same as tower mode, but Sophia's ascent can be controlled using volumes in Tomb Editor.
+* Add TR3 Wasp Mutant:
+	- AI_MODIFY: Don't allow to land, he will always fly (Should not be required, but useful for the spawner).
 * Add airlock switch object. Achieved by putting valve switch trigger and door trigger on the same sector (TR5 submarine door setup).
 * Add OCB 7 for switches to be used with SetItemFlags Lua commands for customizing on/off animations and reachable distance.
 * Add instant headshot to guards.
